--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@vuelidate/core": "^2.0.0",
     "@vuelidate/validators": "^2.0.0",
+    "@vuepic/vue-datepicker": "^4.5.1",
     "@vueuse/core": "^9.13.0",
     "axios": "^1.3.4",
     "pinia": "^2.0.32",
