--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.3.4",
     "pinia": "^2.0.32",
     "vue": "^3.2.47",
+    "vue-draggable-next": "^2.1.1",
     "vue-router": "^4.1.6",
     "vuetify": "^3.1.7"
   },
